--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.22, 2.8, 0.54, 0.62);
     }
 
   </style>
